<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#200049"
    tools:context=".PasswordScreen">

    <EditText
        android:id="@+id/input_num1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="1"
        android:text="@string/input_num1"
        android:textAlignment="center"
        android:textColor="#F6F4F4"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <EditText
        android:id="@+id/input_num2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="1"
        android:text="@string/input_num2"
        android:textAlignment="center"
        android:textColor="#F6F4F4"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />
    <EditText
        android:id="@+id/input_num3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="1"
        android:text="@string/input_num3"
        android:textAlignment="center"
        android:textColor="#F6F4F4"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.587"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />
    <EditText
        android:id="@+id/input_num4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="1"
        android:text="@string/input_num4"
        android:textAlignment="center"
        android:textColor="#F6F4F4"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.759"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <TextView
        android:id="@+id/txt_subPassword"
        android:layout_width="231dp"
        android:layout_height="44dp"
        android:text="@string/txt_subPassword"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_num2"
        app:layout_constraintVertical_bias="0.134" />

    <Button
        android:id="@+id/btn_subLogin"
        android:layout_width="138dp"
        android:layout_height="45dp"
        android:backgroundTint="#E91E63"
        android:text="@string/btn_subLogin"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_subPassword"
        app:layout_constraintVertical_bias="0.314" />

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@android:drawable/ic_menu_revert" />

</androidx.constraintlayout.widget.ConstraintLayout>